update time limit (50ms / turn)

--- a/config/level1/statement_en.html
+++ b/config/level1/statement_en.html
@@ -56,5 +56,29 @@
   <div class="title">Output for one game turn</div> 
           <div class="text"><span class="statement-lineno">Line 1:</span> 2 space separated integers <var>row</var> and <var>col</var>.</div> 
         </div> 
+
+        <!-- Protocol block -->
+        <div class="blk">
+            <div class="title">Constraints</div>
+            <div class="text">Response time for first turn ≤ 1000ms <br>
+                Response time for one turn ≤ 50ms</div>
+        </div>
+    </div>
+    <!-- NEXT LEAGUE RULES -->
+    <div style="color: #7cc576;
+      background-color: rgba(124, 197, 118,.1);
+      padding: 20px;
+      margin-top: 10px;
+      text-align: left;">
+        <div style="text-align: center; margin-bottom: 6px">
+            <img src="//cdn.codingame.com/smash-the-code/statement/league_wood_04.png" />
+        </div>
+        <p style="text-align: center; font-weight: 700; margin-bottom: 6px;">
+            What is in store for me in the higher leagues?
+        </p>
+        The extra rules available in higher leagues are:
+        <ul class="statement-next-rules">
+            Next game will be played on 9 tic-tac-toe boards!
+        </ul>
       </div>
   </div>
