--- a/config/level2/statement_en.html
+++ b/config/level2/statement_en.html
@@ -66,6 +66,13 @@
         <div class="blk"> 
   <div class="title">Output for one game turn</div> 
           <div class="text"><span class="statement-lineno">Line 1:</span> 2 space separated integers <var>row</var> and <var>col</var>.</div> 
-        </div> 
+        </div>
+
+        <!-- Protocol block -->
+        <div class="blk">
+          <div class="title">Constraints</div>
+          <div class="text">Response time for first turn ≤ 1000ms <br>
+              Response time for one turn ≤ 50ms</div>
+        </div>
       </div>
   </div>
