--- a/config/level2/statement_fr.html
+++ b/config/level2/statement_fr.html
@@ -65,6 +65,14 @@
         <div class="blk"> 
   <div class="title">Sortie pour un tour de jeu</div> 
           <div class="text"><span class="statement-lineno">Ligne 1:</span> 2 entiers séparés par un espace <var>row</var> et <var>col</var>.</div> 
-        </div> 
+        </div>
+
+        <!-- Protocol block -->
+        <div class="blk">
+          <div class="title">Contraintes</div>
+          <div class="text">Temps de réponse premier tour ≤ 1000ms <br>
+              Temps de réponse par tour ≤ 50ms</div>
+        </div>
+
       </div>
   </div>
