--- a/config/level1/statement_fr.html
+++ b/config/level1/statement_fr.html
@@ -56,5 +56,29 @@
   <div class="title">Sortie pour un tour de jeu</div> 
           <div class="text"><span class="statement-lineno">Ligne 1:</span> 2 entiers séparés par un espace <var>row</var> et <var>col</var>.</div> 
         </div> 
+
+        <!-- Protocol block -->
+        <div class="blk">
+            <div class="title">Contraintes</div>
+            <div class="text">Temps de réponse premier tour ≤ 1000ms <br>
+                Temps de réponse par tour ≤ 50ms</div>
+        </div>
+    </div>
+    <!-- NEXT LEAGUE RULES -->
+    <div style="color: #7cc576;
+      background-color: rgba(124, 197, 118,.1);
+      padding: 20px;
+      margin-top: 10px;
+      text-align: left;">
+        <div style="text-align: center; margin-bottom: 6px">
+            <img src="//cdn.codingame.com/smash-the-code/statement/league_wood_04.png" />
+        </div>
+        <p style="text-align: center; font-weight: 700; margin-bottom: 6px;">
+            Qu'est-ce qui m'attend dans les prochaines ligues ?
+        </p>
+        Les nouvelles règles débloquées dans les prochaines ligues sont :
+        <ul class="statement-next-rules">
+            Le prochain jeu se déroulera sur 9 grilles de tic-tac-toe en même temps !
+        </ul>
       </div>
   </div>
