precise victory condition in statement

--- a/config/level2/statement_en.html
+++ b/config/level2/statement_en.html
@@ -43,7 +43,7 @@
             <div class="icon victory"></div> 
             <div class="blk"> 
               <div class="title">Victory Conditions</div> 
-              <div class="text">You've won on 3 aligned smaller tic-tac-toe boards.</div> 
+              <div class="text">You've won on 3 aligned smaller tic-tac-toe boards. If nobody managed to get 3 marks aligned, the player that won the most smaller tic-tac-toe boards wins.</div> 
             </div> 
           </div> 
         </div> 
