--- a/config/level2/statement_fr.html
+++ b/config/level2/statement_fr.html
@@ -42,7 +42,7 @@
             <div class="icon victory"></div> 
             <div class="blk"> 
               <div class="title">Conditions de victoire</div> 
-              <div class="text">Vous avez gagné sur 3 grilles de tic-tac-toe alignées</div> 
+              <div class="text">Vous avez gagné sur 3 grilles de tic-tac-toe alignées. Si aucun joueur n'arrive à aligner 3 marques, le joueur ayant gagné le plus de petites grilles gagne.</div> 
             </div> 
           </div> 
         </div> 
