Gender inclusive phrasing

--- a/config/level2/statement_en.html
+++ b/config/level2/statement_en.html
@@ -33,7 +33,7 @@
           <span class="icon icon-rules">&nbsp;</span> 
           <span>Rules</span> 
         </h2> 
-        <div><div class="statement-rules-content"><p>When a player plays on a small board, he also decides where the next player will be allowed to play: for example, if a player has played in the bottom left square of one of the small boards, the next player will play on the small board located at the bottom left square of the main board.</p>
+        <div><div class="statement-rules-content"><p>When a player plays on a small board, that player also decides where the next player will be allowed to play: for example, if a player has played in the bottom left square of one of the small boards, the next player will play on the small board located at the bottom left square of the main board.</p>
 
 <p>If a player is sent to a board that is either already won, or full, then that player is allowed to play in any empty square.</p>
 
